--- a/build.gradle
+++ b/build.gradle
@@ -2,32 +2,41 @@
 buildscript {
     ext.kotlin_version = "1.4.30"
     repositories {
+        maven {
+            url uri('/repo')
+        }
         google()
         jcenter()
     }
     dependencies {
+        // classpath "com.dashingqi.gradle:buildPlugin:1.0.0"
+//        classpath "com.dashingqi.gradle:plugin1:1.0.0"
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+
 allprojects {
     repositories {
+//        maven {
+//            url uri('/repo')
+//        }
         google()
         jcenter()
     }
 }
 apply plugin: MyPlugin
+
 // 自定义插件
 class MyPlugin implements Plugin<Project> {
 
     @Override
     void apply(Project project) {
-        project.task("CustomPluginTask"){
-            doLast{
+        project.task("CustomPluginTask") {
+            doLast {
                 println "自定义插件"
             }
         }
