--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,14 @@
 buildscript {
     ext.kotlin_version = "1.4.30"
     repositories {
-        maven {
-            url uri('/repo')
-        }
+//        maven {
+//            url uri('/repo')
+//        }
         google()
         jcenter()
     }
     dependencies {
-        // classpath "com.dashingqi.gradle:buildPlugin:1.0.0"
-//        classpath "com.dashingqi.gradle:plugin1:1.0.0"
+//        classpath 'com.dashingqi.gradle.plugin:plugins:1.0.0'
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
